--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="hero">
         <div class="menu">
             <nav>
-                <img src="..\altschool\images\Logo.svg" alt="Scissor"/>
+                <img src=".\altschool\images\Logo.svg" alt="Scissor"/>
                 <ul>            
                     <li><a href=""class="active_color">My URLs</a></li>
                     <li><a href=>Features</a>
