--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>            
                     <li><a href=""class="active_color">My URLs</a></li>
                     <li><a href=>Features</a>
-                    <img src="../altschool/images/down-arrow.svg" alt="Features"></li>
+                    <img src="./images/down-arrow.svg" alt="Features"></li>
                     <li><a href=>Pricing</a></li>
                     <li><a href=>Analytics</a></li>
                     <li><a href=>FAQs</a></li>
@@ -32,7 +32,7 @@
            <!-- Hero Text -->
         <div class="optimize">
                 <h1> Optimize Your Online Experience with Our <br><span> Advanced URL Shortening </span> Solution </h1>
-                <img src="..\altschool\images\underline.svg" alt="vector"/>
+                <img src=".\images\underline.svg" alt="vector"/>
                 <p> Personalize your shortened URLs to align with your brand identity. Utilize custom slugs, branded links, and domain customization options to reinforce your brand presence and enhance user engagement.</p>
                 <div class="button"> <button>Sign Up</button> <h5>Learn More</h5></div>
         </div>
